2005-03-14	Benedikt Meurer <benny@xfce.org>

	* configure.ac, doc/C/Terminal.xml.in: Automatically substitute the
	  package version for the documentation.
	* HACKING: Update the documentation step.
	* doc/C/images/*.png: Update the screenshots.
	* doc/C/Terminal.xml.in: Add a note about the new "MiscTabCloseButtons"
	  hidden option.
	* po/: Update translations.
	* helpers/galeon.desktop.in, helpers/Makefile.am: Add Galeon.

2005-03-14	Benedikt Meurer <benny@xfce.org>

	* doc/C/*.html: Remove autogenerated html files.
	* doc/C/Makefile.am, configure.ac, Makefile.am: Automatically generate
	  html files if xsltproc is detected on the target system. Else use the
	  included html files from the dist tarball.
	* doc/terminal.xsl: Remove obsolete shade.verbatim parameter.

2005-03-14	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Be verbose when testing the D-BUS version.
	* terminal/terminal-helper-dialog.c(menu_activate_other): Make this
	  compile with --disable-final.
	* terminal/terminal-dbus.c(handle_message): Use DBUS_INTERFACE_LOCAL
	  when compiling with D-BUS >= 0.31.
	* terminal/terminal-dbus.c: Use dbus_message_set_auto_start() when
	  compiling with D-BUS >= 0.31.

2005-03-14	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-tab-header.c, terminal/terminal-preferences.c, NEWS:
	  Add a hidden option "MiscTabCloseButtons", which can be either "TRUE"
	  or "FALSE" and determines whether close buttons should be shown in the
	  terminal tab headers or not. This works around bug #64 until we get
	  a better notebook widget.
	* helpers/balsa.desktop.in, helpers/evolution.desktop.in,
	  helpers/sensible-browser.desktop.in, helpers/kmail.desktop.in,
	  helpers/Makefile.am: Add .desktop files for the Balsa, KMail and
	  Evolution Mail Readers. Add a .desktop file for the default Debian
	  browser, the so called sensible-browser.
	* terminal/terminal-helper-dialog.c: Add a tooltip to the chooser
	  button.