@@ -1,5 +1,9 @@
 2005-03-14	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-helper-dialog.c, po/: Small text fix.
+
+2005-03-14	Benedikt Meurer <benny@xfce.org>
+
 	* configure.ac, doc/C/Terminal.xml.in: Automatically substitute the
 	  package version for the documentation.
 	* HACKING: Update the documentation step.
